--- a/src/Styles/Layout/_footer.scss
+++ b/src/Styles/Layout/_footer.scss
@@ -1,12 +1,23 @@
 footer {
-    background-color: black;
+    background-color: $background-color-footer;
     display: flex;
     flex-direction: column;
     align-items: center;
-    img {
+    padding-top: 66px;
+    padding-bottom: 58px;
+    &__img {
         width: 122px;
     }
     p {
-        color: white;
+        color: $color-white;
+        font-size: $font-mobil-nav-footer;
+        max-width: 95px;
+    }
+    @media screen and (min-width: 800px) { 
+        padding-bottom: 29px;
+        p {
+            font-size: $font-desktop-nav-footer;
+            max-width: none;
+        }
     }
 }
