--- a/src/Styles/Layout/_header.scss
+++ b/src/Styles/Layout/_header.scss
@@ -1,7 +1,15 @@
 .header {
+    margin-top: 20px;
+    @include margin-left-right-mobile();
     @include display-header();
-         &__img {
-        width: 50%;
-        height: 100%;
+         img {
+            height: 46px;
         }
-}
+        @media screen and (min-width: 800px) {
+            margin-top: 45px;
+            @include margin-left-right-desktop;
+            &__img {
+                height: 68px;
+            }
+        }
+ }
