--- a/src/Styles/_settings.scss
+++ b/src/Styles/_settings.scss
@@ -1,15 +1,42 @@
 /**********          VARIABLE          **********/
 
 /* Color */
+
 $color-principal : #FF6060;
 
-/*Font-size*/
+$color-white : white;
+
+/* Background color */
+
+$background-color-footer : black ;
+
+/* Font-size */
+
 $font-mobil-nav-footer : 12px;
-$font-desktop-nav-footer : 18px;
+
+$font-desktop-nav-footer : 24px;
+
+$font-title-principal : 36px;
+
+$font-title-secondary : 18px;
+
+$font-text : 14px;
+
+/* Font-weight */
+
+$weight-general : 500;
+
+/* Margin & Padding */
+
+$margin-error-mobil : 113px;
+
+$margin-error-desktop : 139px;
+
 
 /**********          MIXIN          **********/
 
-/*Display*/
+/* Display */
+
 @mixin display-header {
     display: flex;
     justify-content: space-between;
@@ -18,5 +45,22 @@ $font-desktop-nav-footer : 18px;
 @mixin display-nav {
     display: flex;
     justify-content: space-around;
-    gap: 26px;
+}
+
+@mixin body-central-vertical{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Margin & Padding */
+
+@mixin margin-left-right-desktop {
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+@mixin margin-left-right-mobile {
+    margin-left: 20px;
+    margin-right: 20px;
 }
