--- a/src/Styles/_settings.scss
+++ b/src/Styles/_settings.scss
@@ -32,6 +32,10 @@ $margin-error-mobil : 113px;
 
 $margin-error-desktop : 139px;
 
+/* Banner */
+
+$border-radius-desktop : 25px;
+
 
 /**********          MIXIN          **********/
 
@@ -63,4 +67,13 @@ $margin-error-desktop : 139px;
 @mixin margin-left-right-mobile {
     margin-left: 20px;
     margin-right: 20px;
+}
+
+/* Banner */
+
+@mixin banner-mobile {
+    width: 100%;
+    border-radius: 10px;
+    opacity: 70%;
+    object-fit: cover;
 }
