--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -2,4 +2,8 @@
 @import "./Layout/header";
 @import "./Layout/footer";
 @import "./Composants/navigation";
+@import "./Composants/collapse";
+@import "./Composants/banner";
+@import "./Pages/about";
 @import "./Pages/error";
+@import "./Pages/home";
