--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -4,6 +4,7 @@
 @import "./Composants/navigation";
 @import "./Composants/collapse";
 @import "./Composants/banner";
+@import "./Composants/card";
 @import "./Pages/about";
 @import "./Pages/error";
 @import "./Pages/home";
