--- a/src/Styles/Composants/_banner.scss
+++ b/src/Styles/Composants/_banner.scss
@@ -1,11 +1,16 @@
-.banner-home {
-    img {
+
+    .banner-home {
         @include banner-mobile;
-        height: 111px;
+       
+        .small {
+           height: 111px;  
+        }
+        .medium {
+          height: 223px;  
+        }
     }
     @media screen and (min-width: 800px) {
-        img {
+        .banner-home {
         border-radius: $border-radius-desktop;
         height: 223px;}
     }
-}
