--- a/src/Styles/Composants/_card.scss
+++ b/src/Styles/Composants/_card.scss
@@ -5,7 +5,7 @@
     width: 340px;
     height: 340px;
     border-radius: 10px;
-    
+   background: center/cover;
 }
 @media screen and (min-width: 800px) { 
     display: grid;
