--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -6,6 +6,7 @@
 @import "./Composants/banner";
 @import "./Composants/cards";
 @import "./Composants/card";
+@import "./Composants/slide";
 @import "./Pages/about";
 @import "./Pages/error";
 @import "./Pages/home";
