--- a/src/Styles/Composants/_cards.scss
+++ b/src/Styles/Composants/_cards.scss
@@ -1,8 +1,24 @@
 .cards {
-    display: flex;
-    flex-direction: column;
-    @media screen and (min-width: 800px) { 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-}
+
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      margin-top: 22px;
+      @media screen and (min-width: 800px) { 
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      row-gap: 50px;
+        column-gap: 60px;
+        margin-top: 43px;
+    }
+
+    }
+  
+    
+
+  
+  
+  
+  
+  
+  
