--- a/src/Styles/Pages/_housing.scss
+++ b/src/Styles/Pages/_housing.scss
@@ -1,48 +1,101 @@
 .body-housing {
-    color : $color-principal;
-    @include margin-left-right-mobile;
-    .img-body-housing {
-      border-radius: $border-radius-mobile;
+  color: $color-principal;
+  @include margin-left-right-mobile;
+
+  .img-body-housing {
+    border-radius: $border-radius-mobile;
+  }
+
+  .general-housing {
+    .description-general {
+      .title-housing {
+        font-size: $font-title-secondary;
+      }
+
+      .second-title-housing {
+        font-size: $font-text;
+      }
     }
-    .general-housing {
-      .tag-box {
-        display: flex;
-        .tag {
+
+    .tag-box {
+      display: flex;
+
+      .tag {
         background-color: $color-principal;
         color: $color-white;
         border-radius: $border-radius-mobile;
-      }
-      }
-      
-        .identification-host {
-          display: flex;
-          justify-content: space-between;
-          .host-name-picture {
-            display: flex;
-            .picture-host {
-                border-radius: 100px;
-            }
-          }
-   
+        width: 84px;
+        height: 18px;
+        font-size: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 10px;
       }
     }
-  
-    @media screen and (min-width: 800px) {
-      @include margin-left-right-desktop;
-      .img-body-housing {
-        border-radius: $border-radius-desktop;
-      }
-      .general-housing {
-        display: flex;
-        justify-content: space-between;
 
-        .identification-host{
-            display: flex;
-            flex-direction: column-reverse;
+    .identification-host {
+      display: flex;
+      justify-content: space-between;
+
+      .host-name-picture {
+        display: flex;
+
+        .picture-host {
+          border-radius: 100px;
         }
       }
-      .collapse-housing {
-        display: flex;
+    }
+
+    .collapse-housing {
+      display: flex;
+      justify-content: space-around;
+
+      .test {
+        height: 40px;
       }
     }
   }
+
+  @media screen and (min-width: 800px) {
+    @include margin-left-right-desktop;
+    .img-body-housing {
+      border-radius: $border-radius-desktop;
+    }
+
+    .general-housing {
+      display: flex;
+      justify-content: space-between;
+
+      .description-general {
+        .title-housing {
+          font-size: $font-title-principal;
+        }
+
+        .second-title-housing {
+          font-size: $font-title-secondary;
+        }
+
+        .tag {
+          width: 115px;
+          height: 25px;
+          font-size: 14px;
+        }
+      }
+
+      .identification-host {
+        display: flex;
+        flex-direction: column-reverse;
+      }
+    }
+
+    .collapse-housing {
+      display: flex;
+      justify-content: space-around;
+
+      .test {
+        height: 40px;
+      }
+    }
+  }
+}
