page erreur, avancement, tentative collapse

--- a/src/Styles/Composants/_banner.scss
+++ b/src/Styles/Composants/_banner.scss
@@ -1,8 +1,8 @@
     .banner-home {
         @include banner-mobile;
-       
+        filter: brightness(0.7);
         .small {
-           height: 111px;  
+           height: 111px;
         }
         .medium {
           height: 223px;  
