--- a/src/Styles/Composants/_cards.scss
+++ b/src/Styles/Composants/_cards.scss
@@ -1,15 +1,16 @@
 .cards {
 
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: wrap;
       gap: 20px;
       margin-top: 22px;
       @media screen and (min-width: 800px) { 
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
+
       row-gap: 50px;
-        column-gap: 60px;
-        margin-top: 43px;
+      column-gap: 60px;
+      margin-top: 43px;
     }
 
     }
