--- a/src/Styles/Composants/_collapse.scss
+++ b/src/Styles/Composants/_collapse.scss
@@ -1,4 +1,7 @@
-.about-collapse-title {
+.collapse-general {
+  width: 100%;
+
+  .about-collapse-title {
     background-color: $color-principal;
     display: flex;
     justify-content: space-between;
@@ -7,10 +10,25 @@
     padding-right: 5px;
     height: 30px;
     border-radius: 5px;
-   color: white;
-  
-  } .text-collapse-about {
-    color: $color-principal;
-   }
+    color: white;
+    position: relative;
 
-   
+    .arrow-collapse {
+      transition: transform 0.5s ease;
+    }
+  }
+
+  .text-collapse-about {
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
+    color: $color-principal;
+    transition: height 3s ease, opacity 3s ease; 
+
+    &.slide-down {
+      height: auto;
+      opacity: 1;
+      padding: 10px; 
+  }
+}
+}
