--- a/src/Styles/Composants/_slide.scss
+++ b/src/Styles/Composants/_slide.scss
@@ -6,18 +6,21 @@
       height: 255px;
       border-radius: 10px;
       background: cover;
-  
+      margin-top: 27px;
       @media screen and (min-width: 800px) {
         height: 415px;
         border-radius: 25px;
+        margin-top: 50px;
       }
     }
   
     .arrow-left,
     .arrow-right {
       position: absolute;
-      top: 100px;
+      top: 45%;
       cursor: pointer;
+      width: 24px;
+      height: 24px;
     }
   
     .arrow-left {
@@ -37,5 +40,22 @@
       justify-content: center;
       color: $color-white;
       font-size: 16px;
+      visibility: hidden;
+        }
+
+    @media screen and (min-width: 800px) {
+
+      .arrow-left,
+    .arrow-right {
+      width: 96px;
+      height: 119px;
+    }
+      .slide-counter {
+        visibility: visible;
+      }
+      .slide-counter {
+        margin-bottom: 25px;
+        font-size: 18px;
+          }
     }
   }
