--- a/src/Styles/_settings.scss
+++ b/src/Styles/_settings.scss
@@ -1,3 +1,13 @@
+/**********          BODY          **********/
+
+body {
+    font-weight: 500;
+    @media screen and (min-width: 800px) {
+        max-width: 1400px;
+        margin: auto;
+    }
+}
+
 /**********          VARIABLE          **********/
 
 /* Color */
@@ -76,6 +86,5 @@ $border-radius-desktop : 25px;
 @mixin banner-mobile {
     width: 100%;
     border-radius: 10px;
-    opacity: 70%;
     object-fit: cover;
 }
