--- a/src/Styles/Composants/_collapse.scss
+++ b/src/Styles/Composants/_collapse.scss
@@ -1,34 +1,43 @@
 .collapse-general {
   width: 100%;
+}
 
-  .about-collapse-title {
-    background-color: $color-principal;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 5px;
-    padding-right: 5px;
-    height: 30px;
-    border-radius: 5px;
-    color: white;
-    position: relative;
+.about-collapse-title {
+  background-color: $color-principal;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  height: 30px;
+  border-radius: 5px;
+  color: white;
+  position: relative;
 
-    .arrow-collapse {
-      transition: transform 0.5s ease;
-    }
-  }
-
-  .text-collapse-about {
-    height: 0;
-    opacity: 0;
-    overflow: hidden;
-    color: $color-principal;
-    transition: height 3s ease, opacity 3s ease; 
-
-    &.slide-down {
-      height: auto;
-      opacity: 1;
-      padding: 10px; 
+  .arrow-collapse {
+    transition: transform 3s ease;
   }
 }
+
+.text-collapse-about {
+  padding: 10px;
+  color: $color-principal;
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: height 3s ease, opacity 3s ease;
+}
+
+/* Utilisez la classe slide-down pour afficher le texte */
+.slide-down {
+  height: auto;
+  opacity: 1;
+  padding: 10px;
+}
+
+/* Utilisez la classe slide-up pour masquer le texte */
+.slide-up {
+  height: 0;
+  opacity: 0;
+  padding: 0;
 }
