--- a/src/Styles/Pages/_error.scss
+++ b/src/Styles/Pages/_error.scss
@@ -29,7 +29,7 @@
             margin-bottom: 0;
         }
         .first-message-error{
-            font-size: 36px;
+            font-size: $font-title-principal;
             margin-top: $margin-error-desktop;
             margin-bottom: 0;
         }
