--- a/src/Styles/Layout/_footer.scss
+++ b/src/Styles/Layout/_footer.scss
@@ -1,8 +1,6 @@
 footer {
     background-color: $background-color-footer;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include body-central-vertical;
     padding-top: 66px;
     padding-bottom: 58px;
     &__img {
